Added to pages and added migrations

--- a/RecruitCatkudumusr/appsettings.json
+++ b/RecruitCatkudumusr/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecruitCatkudumusrContext": "Server=(localdb)\\mssqllocaldb;Database=RecruitCatkudumusrContext-a1291f29-cecf-405f-8286-b4519d9bbd38;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
